[Style] Added styles

--- a/client/layout/navprofile.html
+++ b/client/layout/navprofile.html
@@ -1,7 +1,15 @@
-<ul className = "nav navbar-nav">
-  <li class = "active"><a ui-sref="trucks">ICON</a></li>
-</ul>
 
-<ul className="nav-pills pull-right">
-  <li><button ng-click = "logout()">Logout</button></li>
+
+<nav className="navbar navbar-default navbar-static-top">
+<div className="container">
+<div className="navbar-header">
+<div id="navbar-collapse" className="collapse navbar-collapse">
+	<ul className="nav navbar-nav">
+    <li class = "active"><a ui-sref="trucks"><img src="../assets/foodtruck.PNG" height="70"></a></li>
 </ul>
+    <ul className="nav navbar-nav navbar-right">
+   		<li><button ng-click = "logout()">Logout</button></li>
+   	</ul>
+   	</div>
+</div>
+</nav>
