[Style] Added css global.css file and angular material to project, styled menu bar, and working on card layout for trucklist

--- a/client/layout/navprofile.html
+++ b/client/layout/navprofile.html
@@ -1,7 +1,19 @@
-<ul className = "nav navbar-nav">
-  <li class = "active"><a ui-sref="trucks">ICON</a></li>
-</ul>
+<!--<ul className = "menu">
 
-<ul className="nav-pills pull-right">
-  <li><button ng-click = "logout()">Logout</button></li>
-</ul>
+  <li class = "active">
+    <a ui-sref="trucks">ICON</a>
+  </li>
+
+  <li class ="active">
+    <a ng-click = "logout()">Logout</a>
+  </li>
+
+</ul>-->
+
+<div class = "good">
+  <a  ui-sref= "trucks"> ICON </a>
+  <a  ng-click = "logout()">LOG OUT</a>
+
+</div>
+
+<!--bower install angular-material -D-->
