--- a/client/layout/navtrucks.html
+++ b/client/layout/navtrucks.html
@@ -1,7 +1,11 @@
-<ul className = "nav navbar-nav">
-  <li class = "active"><a ui-sref="trucks">ICON</a></li>
-</ul>
+<!--<ul className = "menu">-->
+  <!--<li class = "active"><a ui-sref="trucks">ICON</a></li>-->
+  <!--<li class = "active"><a ui-sref="signin">Sign In</a></li>-->
+<!--</ul>-->
+<div class = "menu">
 
-<ul classname = "nav-pills pull-right">
-  <li class = "active"><a ui-sref="signin">Sign In</a></li>
-</ul>
+<a class = "fixed-size one" ui-sref= "trucks"> ICON </a>
+<a class = "fixed-size two" ui-sref= "signin"> SIGN IN </a>
+
+
+</div>
