[Progress] styled login logout controllers, and menue bar

--- a/client/layout/navtrucks.html
+++ b/client/layout/navtrucks.html
@@ -4,8 +4,8 @@
 <!--</ul>-->
 <div class = "menu">
 
-<a class = "fixed-size one" ui-sref= "trucks"> ICON </a>
-<a class = "fixed-size two" ui-sref= "signin"> SIGN IN </a>
+<a class = "main-header one" ui-sref= "trucks"> ICON </a>
+<a class = "main-header two" ui-sref= "signin"> SIGN IN </a>
 
 
 </div>
