--- a/client/styles/global.style.css
+++ b/client/styles/global.style.css
@@ -11,6 +11,8 @@ body {
 
 }
 
+/*[truck]*/
+/*** trucks--> trucks.controller--> menu header ***/
 .menu {
   font-size: 2rem;
   display: flex;;
@@ -19,7 +21,7 @@ body {
   margin: 1%;
 }
 
-.fixed-size {
+.main-header {
   flex: none;
   padding: .5%;
   background-color: #00ced1;
@@ -27,6 +29,14 @@ body {
   text-align: center;
   margin: .5%;
 }
+
+.main-header one {
+  margin-right: auto;
+
+}
+
+/*** trucks--> trucks.controller--> ng-repeat trucklist div ***/
+/*
 .wrap {
   float: left;
   display: block;
@@ -37,14 +47,10 @@ ul.wrap,  ul.wrap>li {
   margin: 3px;
   padding: 0;
 }
+*/
 
-
-
-.fixed-size one {
-  margin-right: auto;
-
-}
-
+/*[profile]*/
+/*** profile--> profile.controller--> menu header ***/
 .good {
   line-height: 30px;
   padding-left: 10px;
@@ -53,3 +59,92 @@ ul.wrap,  ul.wrap>li {
     background-color: rgba(0, 128, 0, 0.31);
 }
 
+
+
+.cover{
+  background-color: #EBEBEB;
+
+  .fullname{
+    margin-bottom: 3px;
+    margin-top: 0px;
+  }
+  .username{
+    margin-bottom:5px;
+  }
+}
+
+message md-chips{
+  margin: auto;
+  .md-chips{
+    box-shadow: none;
+  }
+}
+
+message div.md-list-item-text.compact{
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.md-list-item-text.compact .message-content{
+  background-color: #F5F5F5;
+  border-color: #F5F5F5;
+  padding: 10px;
+  margin: 0px;
+  position: relative;
+}
+
+message {
+  margin-bottom: 10px;
+}
+message:not(.repeated-author) .message-content:before{
+  left: -8px;
+  border-width: 0 8px 8px 0 !important;
+  border-right-color: inherit;
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-bottom-color: transparent;
+}
+
+message:not(.repeated-author) md-list-item{
+  margin-top: 20px;
+}
+.repeated-author{
+  img.message-avatar {
+    opacity: 0;
+    height: 0;
+  }
+}
+
+.repeated-author p, .repeated-author small {
+  display: none;
+}
+
+message .md-avatar.message-avatar{
+  margin-bottom: 0px;
+}
+
+message md-list-item.contact-item{
+  min-height: 0;
+}
+
+
+
+
+.login-frame img, .registration-frame img {
+  width: 30%;
+  margin: auto;
+}
+
+.login-frame md-card, .registration-frame md-card {
+  max-width: 400px;
+  margin: auto;
+}
+
+.full-height {
+  height: 100%;
+  box-sizing: border-box;
+}
