[Debug] finding bug in recent changes

--- a/client/layout/navtrucks.html
+++ b/client/layout/navtrucks.html
@@ -1,7 +1,14 @@
-<ul className = "nav navbar-nav">
-  <li class = "active"><a ui-sref="trucks">ICON</a></li>
-</ul>
+<!--<ul className = "nav navbar-nav">-->
+  <!--<li class = "active"><a ui-sref="trucks">ICON</a></li>-->
+<!--</ul>-->
 
-<ul classname = "nav-pills pull-right">
-  <li class = "active"><a ui-sref="signin">Sign In</a></li>
-</ul>
+<!--<ul classname = "nav-pills pull-right">-->
+  <!--<li class = "active"><a ui-sref="signin">Sign In</a></li>-->
+<!--</ul>-->
+<div class = "menu">
+
+<a class = "main-header one" ui-sref= "trucks"> ICON </a>
+<a class = "main-header two" ui-sref= "signin"> SIGN IN </a>
+
+
+</div>
