--- a/client/styles/global.style.css
+++ b/client/styles/global.style.css
@@ -1,13 +1,13 @@
 * {
   list-style: none;
   box-sizing: border-box;
-  /*max-width: 37.5rem;*/
 }
 
 body {
   width:100%;
   padding:0;
-  margin:0;
+  margin:auto;
+
 
 }
 
