--- a/client/styles/global.style.css
+++ b/client/styles/global.style.css
@@ -1,6 +1,7 @@
 * {
   list-style: none;
   box-sizing: border-box;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 body {
@@ -18,6 +19,7 @@ body {
   display: flex;;
   flex-flow: row wrap;
   background-color: rgba(163, 160, 160, 0.45);
+
   margin: 1%;
 }
 
